# docassemble-JointSimplifiedDivorce

./: MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/JointSimplifiedDivorce/data/questions/: joint_simplified_divorce.yml  joint_simplified_divorce_review.yml
docassemble/JointSimplifiedDivorce/data/templates/: instructions.docx
